# SentinelNode

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  devcontainer.json  docker-compose.yml  start.bat  stop.bat  structure.ini
node-api/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
node-api/frontend/: index.html  package-lock.json  package.json  vite.config.ts
node-api/frontend/src/: App.tsx  declarations.d.ts  index.css  main.tsx
node-api/frontend/src/components/: HeaderAudit.tsx  ScanResults.tsx
node-api/frontend/src/pages/: Dashboard.tsx  Login.tsx  Settings.tsx
node-api/src/: index.ts
node-api/src/modules/auth/: auth.routes.ts
node-api/src/modules/network/: network.routes.ts
node-api/src/modules/scanner/: scanner.routes.ts
node-api/src/modules/settings/: settings.routes.ts
node-api/src/shared/: types.ts
node-api/src/shared/middleware/: auth.ts
node-api/src/shared/utils/: db.ts  ipc.ts
rust-core/: Cargo.toml  Dockerfile
rust-core/src/: main.rs  scanner.rs  types.rs  watcher.rs
