[package]
name    = "sentinel-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sentinel-core"
path = "src/main.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
regex      = { version = "1" }
rayon      = { version = "1" }
walkdir    = { version = "2" }
chrono     = { version = "0.4", features = ["serde"] }
tiny_http  = { version = "0.12" }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true